{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 185,
  "lineage": "2bea3c71-f719-60ba-850d-75238d223fa2",
  "resources": [
    {
      "module": "module.db",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_mongo",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-05-17T05:07:31.983-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/infra-313311/global/firewalls/allow-terrmongo-default",
            "log_config": [],
            "name": "allow-terrmongo-default",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-313311/global/networks/default",
            "priority": 1000,
            "project": "infra-313311",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-313311/global/firewalls/allow-terrmongo-default",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "reddit-app"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "reddit-db"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/infra-313311/global/images/mongodb",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/infra-313311/zones/europe-west1-b/disks/mongo"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/infra-313311/zones/europe-west1-b/instances/mongo",
            "instance_id": "6607529003052950123",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDDnjqE24ZheeIikN+tmWahGJyxHIAYJ9Gjvqn20EDZClc/jDHbVq+uJ/ud1oYJVcPex3CLunYTyr3O6MzFQzKLR9aNK97BlSY0ygaanVEK81J5awl8LYb71DFJ7ItjgKjgCacFBMIuW8VgSRioFVmJgYAsytZvAbY8EfiPbW48XV8byT0Me49marhKvwRUKyVl6JO2+QibXxXt1hKknMirXtScCogYsQqszp+/jok0AOBJcZGHE6rT2zRfPoXSJ4FxhDIceY3kyFa+DjzMkolu67hSPU1OV2n6Nqp0xd7QcUgVtEwBQf/loaqHLSzXkXV6KwJjLn+osCsF3xBVy/Dt4jJtwBugi6DOP3N7l/8RVjGEsa7qFnkxyCcIANM5xhTLq+NOf69lf6ouS7RbNKGHUjuM4YD3pUCAbMIaa7bVtbqP [...]
            },
            "metadata_fingerprint": "UP3medF53qI=",
            "name": "mongo",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.195.187.215",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infra-313311/global/networks/default",
                "network_ip": "10.132.0.40",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infra-313311/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "infra-313311"
              }
            ],
            "project": "infra-313311",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-313311/zones/europe-west1-b/instances/mongo",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "reddit-db"
            ],
            "tags_fingerprint": "NQyRUqL7UTU=",
            "zone": "europe-west1-b"
          }
        }
      ]
    },
    {
      "module": "module.ruby",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "ruby_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.116.210.231",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-05-17T05:07:32.114-07:00",
            "id": "projects/infra-313311/regions/europe-central2/addresses/ruby-ip",
            "name": "ruby-ip",
            "network_tier": "PREMIUM",
            "project": "infra-313311",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-313311/regions/europe-central2/addresses/ruby-ip"
          }
        }
      ]
    },
    {
      "module": "module.ruby",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_puma",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9292"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-05-17T05:07:31.958-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/infra-313311/global/firewalls/allow-terrpuma-default",
            "log_config": [],
            "name": "allow-terrpuma-default",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-313311/global/networks/default",
            "priority": 1000,
            "project": "infra-313311",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-313311/global/firewalls/allow-terrpuma-default",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "reddit-app"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.ruby",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "ruby",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/infra-313311/global/images/ruby",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/infra-313311/zones/europe-central2-a/disks/ruby"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/infra-313311/zones/europe-central2-a/instances/ruby",
            "instance_id": "7442643290195747454",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDDnjqE24ZheeIikN+tmWahGJyxHIAYJ9Gjvqn20EDZClc/jDHbVq+uJ/ud1oYJVcPex3CLunYTyr3O6MzFQzKLR9aNK97BlSY0ygaanVEK81J5awl8LYb71DFJ7ItjgKjgCacFBMIuW8VgSRioFVmJgYAsytZvAbY8EfiPbW48XV8byT0Me49marhKvwRUKyVl6JO2+QibXxXt1hKknMirXtScCogYsQqszp+/jok0AOBJcZGHE6rT2zRfPoXSJ4FxhDIceY3kyFa+DjzMkolu67hSPU1OV2n6Nqp0xd7QcUgVtEwBQf/loaqHLSzXkXV6KwJjLn+osCsF3xBVy/Dt4jJtwBugi6DOP3N7l/8RVjGEsa7qFnkxyCcIANM5xhTLq+NOf69lf6ouS7RbNKGHUjuM4YD3pUCAbMIaa7bVtbqP [...]
            },
            "metadata_fingerprint": "UP3medF53qI=",
            "name": "ruby",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.116.210.231",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infra-313311/global/networks/default",
                "network_ip": "10.186.0.8",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infra-313311/regions/europe-central2/subnetworks/default",
                "subnetwork_project": "infra-313311"
              }
            ],
            "project": "infra-313311",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-313311/zones/europe-central2-a/instances/ruby",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "reddit-app"
            ],
            "tags_fingerprint": "M-ggixIz-AU=",
            "zone": "europe-central2-a"
          },
          "dependencies": [
            "module.ruby.google_compute_address.ruby_ip"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-05-17T05:07:31.994-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/infra-313311/global/firewalls/default-allow-ssh",
            "log_config": [],
            "name": "default-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-313311/global/networks/default",
            "priority": 1000,
            "project": "infra-313311",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-313311/global/firewalls/default-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}